# learn-rust

./: Cargo.toml  README.md
src/: main.rs
src/arch/: postgresql.md
src/get_start/: fmt_ext.rs  fn_ext.rs  for_ext.rs  from_into.rs  generic_ext.rs  linked_list.rs  match_ext.rs  mod.rs
src/linux/: arch-install.md  await.md  btrfs.md  other.md  packman.md  postgresql.md  video.md  vscode.md
src/md_parse/: parse.rs
src/music/: local_music.rs  mod.rs
src/postgresql/: mod.rs  sqlx.rs
