[package]
name = "learn-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
lofty = "0.22.4"
pulldown-cmark = "0.13.4"
rodio = "0.21.1"
sqlx = {version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "chrono"]}
tokio = {version = "1.48.0", features = ["full"]}
serde = { version = "1.0.228", features = ["derive"] }
rust_decimal = "1.42.0"
regex = "1.12.3"
